Fix white flashes on page load in dark mode
We set the class indicating that dark mode is
enabled before the page is rendered (the script
is called inside `<head>`). The class is now
set on the `<html>` element instead of `<body>`
because `document.body` is not ready yet when
the script is executed.

--- a/dhall-docs/src/Dhall/data/assets/index.css
+++ b/dhall-docs/src/Dhall/data/assets/index.css
@@ -187,7 +187,7 @@ span.of-type-token {
     color: #EBEBEB;
 }
 
-body.dark-mode {
+.dark-mode body {
     background-color: #484848;
 }
 
@@ -214,7 +214,6 @@ body.dark-mode {
 .dark-mode .source-code span {
     color: #D4D4D4;
 }
-
 
 .dark-mode a.copy-to-clipboard {
     color: #bdbdbd !important;
